--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -1,101 +1,108 @@
 {% extends "base.html.twig" %}
-{% block stylesheets %}
-    <link href="{{ asset('CSS/propos.css') }}" rel="stylesheet">
-{% endblock %}
-{% block body %}
-    <div class="container-fluid">
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <h1>Big Title</h1>
-                        <h3>Subtitle</h3>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis.</p>
-                    </div>
-                    <div class="col-md-4 col-lg-4" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-4 offset-lg-4 col-md-4 col-lg-4" style="border-style: solid;">
-                <div class="text-center">
-                    <h1>Big Title</h1>
-                    <h3>Subtitle</h3>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-2 col-lg-2" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                        <h4>Nom Prénom</h4>
-                        <h3>Fonction</h3>
-                    </div>
-                    <div class="col-md-2 col-lg-2" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                        <h4>Nom Prénom</h4>
-                        <h3>Fonction</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row d-flex justify-content-around">
-                    <div class="col-md-2 col-lg-2" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                        <h4>Nom Prénom</h4>
-                        <h3>Fonction</h3>
-                    </div>
-                    <div class="col-md-2 col-lg-2" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                        <h4>Nom Prénom</h4>
-                        <h3>Fonction</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row  ">
-                    <div class="offset-md-2 offset-lg-2 col-md-2 col-lg-2" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                        <h4>Nom Prénom</h4>
-                        <h3>Fonction</h3>
-                    </div>
-                    <div class="col-md-4 col-lg-4 offset-md-3 offset-lg-3" style="border-style: solid;">
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis, siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae poscebant.</p>
-                        <div class="row">
-                            <div class="col-md-12 col-lg-12 button_catalog_subtitle d-flex justify-content-around" style="border-style: solid;">
-                                <input type="button" value="Button" class="btn btn-secondary btn-lg">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="offset-md-1 offset-lg-1 col-md-10 col-lg-10" style="border-style: solid;">
-                <div class="row">
-                    <div class="offset-md-2 offset-lg-2 col-xs-11 col-md-3 col-lg-3" style="border-style: solid;">
-                        <img src="images/presentation.jpg" alt="Bootstrap" class="img-fluid">
-                    </div>
-                    <div class="offset-md-1 offset-lg-1 col-xs-11 col-md-5 col-lg-5" style="border-style: solid;">
-                        <h1>Big Title</h1>
-                        <h3>Subtitle</h3>
-                        <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis, siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae poscebant.</p>
 
-                        <p>Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se abunde iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana porrigitur, non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec indumentorum vilitate gregariis militibus discrepantes opposita cuncta superasse virtute.</p>
-                        <div class="row">
-                            <div class="col-md-12 col-lg-12 button_catalog_subtitle d-flex justify-content-around" style="border-style: solid;">
-                                <input type="button" value="Button" class="btn btn-secondary btn-lg">
-                            </div>
-                        </div>
+{% block body %}
+    <div class="container-fluid page-content">
+        <header>
+            <div class="row justify-content-around block-first">
+                <div class="col-xs-12 col-lg-4 justify-content-around">
+                    <div class="row">
+                        <img src="{{ asset('images/logoH1/a_propos.svg') }}" class="h1">
+                        <h1>A propos</h1>
+                    </div>
+                    <div class="row">
+                        <h2>A subtitle</h2>
+                    </div>
+                    <div class="row">
+                        <p class="envaleur">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi commodo felis
+                            turpis, sit amet rhoncus augue fringilla aliquam. Duis eleifend massa non quam molestie
+                            dictum.</p>
+                    </div>
+                    <div class="row justify-content-around">
+                        <a>
+                            <button>Button</button>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-6 display-small">
+                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
+                </div>
+            </div>
+        </header>
+
+        <div class="row">
+            <div class="col-5">
+                <h4>L'équipe</h4>
+                <div class="row justify-content-center">
+                    <div class="col-4">
+                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                    </div>
+                    <div class="col-4">
+                        <p>Delphine</p>
+                        <p>Dev</p>
+                    </div>
+                </div>
+                <div class="row space justify-content-center">
+                    <div class="col-4">
+                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                    </div>
+                    <div class="col-4">
+                        <p>Ronan</p>
+                        <p>Design</p>
+                    </div>
+                </div>
+                <div class="row space justify-content-center">
+                    <div class="col-4">
+                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                    </div>
+                    <div class="col-4">
+                        <p>Benoit</p>
+                        <p>Dev</p>
+                    </div>
+                </div>
+                <div class="row space justify-content-center">
+                    <div class="col-4">
+                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid  ronde">
+                    </div>
+                    <div class="col-4">
+                        <p>Naïma</p>
+                        <p>Market</p>
+                    </div>
+                </div>
+                <div class="row space justify-content-center">
+                    <div class="col-4">
+                        <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
+                    </div>
+                    <div class="col-4">
+                        <p>Noémie</p>
+                        <p>Design</p>
                     </div>
                 </div>
             </div>
+            <div class="col-7">
+                <h4>Titre</h4>
+                <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
+                    opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu
+                    adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis,
+                    siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae
+                    maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae
+                    poscebant.</p>
+                <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid about" id="left">
+                <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
+                    opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu
+                    adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis,
+                    siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae
+                    maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae
+                    poscebant.</p>
+
+                <p>Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum
+                    ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se abunde
+                    iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana porrigitur,
+                    non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec indumentorum vilitate
+                    gregariis militibus discrepantes opposita cuncta superasse virtute.</p>
+                <div class="row justify-content-center">
+                    <button>Button</button>
+                </div>
+            </div>
         </div>
+    </div>
 {% endblock %}
