Test mobile homepage

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -30,7 +30,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6 display-small">
+                <div class="col-lg-6 d-sm-none d-lg-block">
                     <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
