--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -51,10 +51,7 @@ body {
     margin-bottom: 8em;
 }
 
-.block-first {
-    height: 24em;
-    margin-bottom: 16em;
-}
+
 
 .margin-auto {
     margin: auto;
@@ -367,6 +364,15 @@ footer nav a:hover {
 }
 
 /* MEDIA QUERIES */
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 500px) {
+    .block-first {
+        margin-bottom: 1em;
+    }
+}
 
+@media screen and (min-width: 501px) {
+    .block-first {
+        height: 24em;
+        margin-bottom: 16em;
+    }
 }
