--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -328,7 +328,7 @@ input, textarea {
 /* FOOTER */
 
 footer {
-    height: 200px;
+
     padding-top: 20px;
     background-color: #373737;
     color: #FFF;
@@ -374,5 +374,22 @@ footer nav a:hover {
     .block-first {
         height: 24em;
         margin-bottom: 16em;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .display_desktop {
+       display: none;
+        width: 20px;
+    }
+    .social{
+        height: 20px;
+        width: 20px;
+    }
+}
+@media screen and (min-width: 992px) {
+    .display_mobile {
+        display: none;
+        height: 200px;
     }
 }
