--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -52,62 +52,89 @@
 
 <!-- Footer -->
 <footer>
-    <div class="row d-flex justify-content-between">
-
-            <div class="col-auto">
-                <h5 class="mb-0">Nous contacter</h5>
+    <!-- start desktop display -->
+    <div class="row d-flex justify-content-between display_desktop mr-0 pl-1">
+        <div class="col-auto pr-0 display_desktop">
+            <h5 class="mb-0">Nous contacter</h5>
+        </div>
+        <div class="col-auto d-flex align-items-start p-0 display_desktop">
+            <ul class="p-0 display_desktop">
+                <li class="br text-left"><a class="m-0" href="tel:+44345678903">+44 345 678 903</a></li>
+                <li class="br text-left">cocorico-digital@mail.com</li>
+                <li>
+                    <address class="br text-left">
+                        12, Avenue de Renard, 87270
+                        <div class="text-center"> Thibault-sur-Lacombe</div>
+                    </address>
+                </li>
+            </ul>
+        </div>
+        <div class="col-auto p-0 display_desktop">
+            <h5 class="mb-0">Navigation</h5>
+        </div>
+        <div class="col-auto p-0 display_desktop">
+            <div class="col-auto d-flex align-items-start p-0 display_desktop">
+                <nav id="nav">
+                    <ul class="p-0">
+                        <li><a href="{{ path('home_page') }}">Accueil</a></li>
+                        <li><a href="{{ path('catalog_page') }}">Nos services</a></li>
+                        <li><a href="{{ path('reference_page') }}">Nos clients</a></li>
+                        <li><a href="{{ path('blog_page') }}">Blog</a></li>
+                        <li><a href="{{ path('propos_page') }}">A propos</a></li>
+                        <li><a href="{{ path('contact_page') }}">Nous contacter</a></li>
+                    </ul>
+                </nav>
             </div>
-            <div class="col-auto d-flex align-items-start p-0">
-                <ul class="p-0">
+        </div>
+        <div class="col-auto display_desktop p-0">
+            <h5 class="mb-0">Blog</h5>
+        </div>
+        <div class="col-lg-2 col-md-2 pr-0 pl-0 display_desktop">
+            <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+        </div>
+        <div class="row col-2 mr-xl-5 d-lg-inline-flex p-0 mr-0 display_desktop">
+            <div class="col-12 text-right pr-0">
+                <img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin">
+                <img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook">
+            </div>
+            <div class="col-12 text-right align-self-end p-0 display_desktop">
+                <p id="copyright">&copy; Cocorico Digital - 2018</p>
+            </div>
+        </div>
+    </div>
+    <!-- end desktop display -->
+    <!-- start mobile display -->
+    <div class="row d-flex align-items-center flex-column bd-highlight d-lg-none">
+        <div class="p-2 bd-highlight text-left d-lg-none">
+            <div class="col-auto d-lg-none p-0">
+                <h5 class="mb-0 ">Nous contacter</h5>
+            </div>
+            <div class="col-auto d-flex align-items-start p-0 d-none d-lg-none">
+                <ul class="p-0 d-lg-none">
                     <li class="br text-left"><a class="m-0" href="tel:+44345678903">+44 345 678 903</a></li>
                     <li class="br text-left">cocorico-digital@mail.com</li>
                     <li>
                         <address class="br text-left">
                             12, Avenue de Renard, 87270
-                            <div class="text-center"> Thibault-sur-Lacombe</div>
+                            <div class="text-left"> Thibault-sur-Lacombe</div>
                         </address>
-
                     </li>
                 </ul>
             </div>
-            <div class="col-auto">
-                <h5 class="mb-0">Navigation</h5>
+            <div class="col-12 text-center pl-0 pr-0">
+                <img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin">
+                <img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook">
             </div>
-            <div class="col-auto p-0">
-                <div class="col-auto d-flex align-items-start p-0">
-                    <nav id="nav">
-                        <ul class="p-0">
-                            <li><a href="{{ path('home_page') }}">Accueil</a></li>
-                            <li><a href="{{ path('catalog_page') }}">Nos services</a></li>
-                            <li><a href="{{ path('reference_page') }}">Nos clients</a></li>
-                            <li><a href="{{ path('blog_page') }}">Blog</a></li>
-                            <li><a href="{{ path('propos_page') }}">A propos</a></li>
-                            <li><a href="{{ path('contact_page') }}">Nous contacter</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <div class="col-12 text-center d-lg-none pl-0 pr-0 pt-3">
+                <p id="copyright">&copy; Cocorico Digital - 2018</p>
             </div>
-            <div class="col-auto">
-                <h5 class="mb-0">Blog</h5>
-            </div>
-            <div class="col-lg-2 col-md-2">
-                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
-            </div>
-            <div class="row col-2 mr-xl-5">
-                <div class="col-12 text-right">
-                    <img src="{{ asset('images/social/linkedin-logo-blanc.svg') }}" class="social" alt="logo linkedin">
-                    <img src="{{ asset('images/social/facebook-logo-blanc.svg') }}" class="social" alt="logo facebook">
-                </div>
-                <div class="col-12 text-right align-self-end">
-                    <p id="copyright">&copy; Cocorico Digital - 2018</p>
-                </div>
-            </div>
-
+        </div>
     </div>
-</footer>
+    <!-- end mobile display -->
+    </footer>
 
-{% block javascripts %}{% endblock %}
+    {% block javascripts %}{% endblock %}
 
-<script src="{{ asset('JS/bootstrap.js') }}"></script>
+    <script src="{{ asset('JS/bootstrap.js') }}"></script>
 </body>
 </html>
