--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
-<div class="container-fluid">
+<div class="container-fluid" role="navigation">
     <header>
         <div class="row" id="header-main">
             <!-- Logo -->
@@ -17,14 +17,65 @@
             </div>
             <!-- Nav -->
             <div class="col-lg-9" id="div-nav">
-                <nav id="nav">
-                    <h5><a href="{{ path('home_page') }}">Accueil</a></h5>
+                <nav class="navbar navbar-expand-lg">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="{{ path('home_page') }}">Accueil</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('catalog_page') }}">Nos services</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('reference_page') }}">Nos clients</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('blog_page') }}">Blog</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('propos_page') }}">A propos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('contact_page') }}">Nous contacter</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+
+                <!-- <nav id="nav" class="navbar navbar-expand-md bg-dark">
+
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('home_page') }}">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('catalog_page') }}">Nos services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('reference_page') }}">Nos clients</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('blog_page') }}">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('propos_page') }}">A propos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('contact_page') }}">Nous contacter</a>
+                        </li>
+                    </ul> -->
+                <!-- <h5><a href="{{ path('home_page') }}">Accueil</a></h5>
                     <h5><a href="{{ path('catalog_page') }}">Nos services</a></h5>
                     <h5><a href="{{ path('reference_page') }}">Nos clients</a></h5>
                     <h5><a href="{{ path('blog_page') }}">Blog</a></h5>
                     <h5><a href="{{ path('propos_page') }}">A propos</a></h5>
                     <h5><a href="{{ path('contact_page') }}">Nous contacter</a></h5>
-                </nav>
+                </nav>-->
             </div>
             <div class="col-auto align-self-center ml-auto p-2 bd-highlight">
                 <img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social" alt="logo linkedin">
@@ -42,7 +93,8 @@
             <h2 class="text-center margin-auto">Un projet ?</h2>
         </div>
         <div class="offset-4 col-4 text-center">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria Lorem
+                ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam? Tria</p>
         </div>
         <div class="col-12 align-self-top text-center">
             <button class="margin-auto">Button</button>
@@ -131,10 +183,13 @@
         </div>
     </div>
     <!-- end mobile display -->
-    </footer>
+</footer>
 
-    {% block javascripts %}{% endblock %}
-
-    <script src="{{ asset('JS/bootstrap.js') }}"></script>
+{% block javascripts %}{% endblock %}
+<script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+<script src="{{ asset('JS/bootstrap.js') }}"></script>
 </body>
 </html>
