--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,8 @@
                 <img src="{{ asset('images/logo_medium.png') }}" alt="Logo de cocorico agence digitale">
             </div>
             <!-- Nav -->
-            <div class="col-lg-9" id="div-nav">
-                <nav class="navbar navbar-expand-lg">
+            <div class="col-lg-9 col-sm-10 col-md-10" id="div-nav">
+                <nav class="navbar navbar-expand-lg navbar-light">
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
@@ -43,43 +43,23 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('contact_page') }}">Nous contacter</a>
                             </li>
+                            <li class="nav-item d-lg-none">
+                                <a class="nav-link" href="#"><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}"
+                                                         class="social"
+                                                         alt="logo linkedin"></a>
+                                <a class="nav-link" href="#"><img src="{{ asset('images/social/facebook-logo-bleu.svg') }}"
+                                                         class="social"
+                                                         alt="logo facebook"></a>
+                            </li>
                         </ul>
                     </div>
                 </nav>
-
-                <!-- <nav id="nav" class="navbar navbar-expand-md bg-dark">
-
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('home_page') }}">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('catalog_page') }}">Nos services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('reference_page') }}">Nos clients</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('blog_page') }}">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('propos_page') }}">A propos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('contact_page') }}">Nous contacter</a>
-                        </li>
-                    </ul> -->
-                <!-- <h5><a href="{{ path('home_page') }}">Accueil</a></h5>
-                    <h5><a href="{{ path('catalog_page') }}">Nos services</a></h5>
-                    <h5><a href="{{ path('reference_page') }}">Nos clients</a></h5>
-                    <h5><a href="{{ path('blog_page') }}">Blog</a></h5>
-                    <h5><a href="{{ path('propos_page') }}">A propos</a></h5>
-                    <h5><a href="{{ path('contact_page') }}">Nous contacter</a></h5>
-                </nav>-->
             </div>
-            <div class="col-auto align-self-center ml-auto p-2 bd-highlight">
-                <img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social" alt="logo linkedin">
-                <img src="{{ asset('images/social/facebook-logo-bleu.svg') }}" class="social" alt="logo facebook">
+            <div class="col-auto align-self-center ml-auto p-2 bd-highlight d-sm-none d-lg-block">
+                <a><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social"
+                        alt="logo linkedin"></a>
+                <a><img src="{{ asset('images/social/facebook-logo-bleu.svg') }}" class="social"
+                        alt="logo facebook"></a>
             </div>
         </div>
     </header>
