--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -77,7 +77,7 @@
         </div>
 
         <section class="row ">
-            <div class="row offset-xs-1 col-xs-10 offset-lg-2 col-lg-8 justify-content-around display-large">
+            <div class="row offset-xs-1 col-xs-10 offset-lg-2 col-lg-8 justify-content-around d-lg-none">
                 <div class="row col-lg-12">
                     <h4>Nos clients</h4>
                 </div>
@@ -126,7 +126,7 @@
 
                 </div>
             </div>
-            <div class="row d-flex justify-content-center display-small home-customers block160">
+            <div class="row d-flex justify-content-center home-customers block160 d-sm-none d-lg-flex">
                 <div class="row col-lg-12">
                     <h4>Nos clients</h4>
                 </div>
