--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -94,25 +94,34 @@
                     <!-- The slideshow -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{{ asset('images/img.jpeg') }}" class="img-fluid" alt="">
-                            <div class="carousel-caption">
-                                <h3>Image à l'endroit</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                                <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                                <p>Type de projet</p>
+                                <h6>Titre h6</h6>
+                                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                                <a href="#" class="link1">Voir le projet</a>
                             </div>
+
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ asset('images/img2.jpeg') }}" class="img-fluid" alt="">
-                            <div class="carousel-caption">
-                                <h3>Image à l'envers</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                                <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                                <p>Type de projet</p>
+                                <h6>Titre h6</h6>
+                                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                                <a href="#" class="link1">Voir le projet</a>
                             </div>
+
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ asset('images/img3.jpeg') }}" class="img-fluid" alt="">
-                            <div class="carousel-caption">
-                                <h3>Image en noir et blanc</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                                <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
+                                <p>Type de projet</p>
+                                <h6>Titre h6</h6>
+                                <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
+                                <a href="#" class="link1">Voir le projet</a>
                             </div>
+
                         </div>
                     </div>
 
