Homepage HTML mobile structure

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -43,7 +43,7 @@
             <div class="row d-flex justify-content-around margin-auto">
                 <div class="col-xs-12 col-lg-3">
                     <div class="row justify-content-center">
-                        <img src="{{ asset('images/home/1.marketing.svg') }} " height="100" width="100">
+                        <img src="{{ asset('images/home/1.marketing.svg') }}" height="100" width="100">
                     </div>
                     <div>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
@@ -52,7 +52,7 @@
                 </div>
                 <div class="col-xs-12 col-lg-3">
                     <div class="row justify-content-center">
-                        <img src="{{ asset('images/home/2.design.svg') }} " height="100" width="100">
+                        <img src="{{ asset('images/home/2.design.svg') }}" class="svg" height="100" width="100">
                     </div>
                     <div>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
@@ -61,7 +61,7 @@
                 </div>
                 <div class="col-xs-12 col-lg-3">
                     <div class="row justify-content-center">
-                        <img src="{{ asset('images/home/3.dev.svg') }} " height="100" width="100">
+                        <img src="{{ asset('images/home/3.dev.svg') }}" class="svg" height="100" width="100">
                     </div>
                     <div>
                         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Inquit, dasne adolescenti veniam?
@@ -101,7 +101,6 @@
                                 <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                                 <a href="#" class="link1">Voir le projet</a>
                             </div>
-
                         </div>
                         <div class="carousel-item">
                             <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
@@ -111,7 +110,6 @@
                                 <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                                 <a href="#" class="link1">Voir le projet</a>
                             </div>
-
                         </div>
                         <div class="carousel-item">
                             <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
@@ -121,7 +119,6 @@
                                 <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                                 <a href="#" class="link1">Voir le projet</a>
                             </div>
-
                         </div>
                     </div>
 
@@ -135,6 +132,7 @@
 
                 </div>
             </div>
+
             <div class="row d-flex justify-content-center home-customers block160 d-sm-none d-lg-flex">
                 <div class="row col-lg-12">
                     <h4>Nos clients</h4>
