--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -376,7 +376,7 @@ footer nav a:hover {
 /* MEDIA QUERIES */
 @media screen and (max-width: 500px) {
     .block-first {
-        margin-bottom: 1em;
+        margin-bottom: 1em!important;
     }
 }
 
@@ -393,10 +393,7 @@ footer nav a:hover {
         width: 20px;
     }
 
-    .social {
-        height: 20px;
-        width: 20px;
-    }
+    /* Navbar */
 
     .navbar {
         background: #FFF;
@@ -413,6 +410,18 @@ footer nav a:hover {
         line-height: 1.75em;
         letter-spacing: 0.03em;
         color: #373737;
+    }
+
+    .social {
+        height: 20px;
+        width: 20px;
+    }
+
+    /* Images */
+
+    .svg {
+        margin-top: 4em;
+        margin-bottom: 1.5em;
     }
 }
 
