--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -303,7 +303,7 @@ input {
 
 input, textarea {
     width: 100%;
-    border: solid 1px #373737;
+    border: solid 1px rgba(0,0,0,0.5);
     border-radius: 3px;
     background-color: #FCFCFC;
     padding-left: 10px;
