--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -20,8 +20,8 @@
                             dictum.</p>
                     </div>
                 </div>
-                <div class="col-lg-5 display-small">
-                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid ">
+                <div class="col-lg-5 d-sm-none d-lg-block">
+                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
         </header>
@@ -40,27 +40,27 @@
                     {{ form_start(form) }}
 
                     <div class="form-row d-flex justify-content-around">
-                        <div class="form-group col-md-5 col-lg-5">
+                        <div class="form-group col-sm-12 col-lg-5">
                             {{ form_widget(form.firstname) }}
                         </div>
-                        <div class="form-group col-md-5 col-lg-5">
+                        <div class="form-group col-sm-12 col-lg-5">
                             {{ form_widget(form.lastname) }}
                         </div>
                     </div>
                     <div class="form-row d-flex justify-content-around">
-                        <div class="form-group col-md-5 col-lg-5">
+                        <div class="form-group col-sm-12 col-lg-5">
                             {{ form_widget(form.email) }}
                         </div>
-                        <div class="form-group col-md-5 col-lg-5">
+                        <div class="form-group col-sm-12 col-lg-5">
                             {{ form_widget(form.phoneNumber) }}
                         </div>
                     </div>
                     <div class="row d-flex justify-content-around">
-                        <div class="form-group col-md-5 col-lg-5">
+                        <div class="form-group col-sm-12 col-lg-5">
                             {{ form_widget(form.title) }}
                         </div>
                         <div class="form-group col-md-5 col-lg-5"></div>
-                        <div class="form-group col-md-11 col-lg-11">
+                        <div class="form-group col-sm-12 col-lg-11">
                             {{ form_widget(form.content) }}
                         </div>
                     </div>
