Change logo image

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <div class="row" id="header-main">
             <!-- Logo -->
             <div class="col-auto" id="logo-nav">
-                <img src="{{ asset('images/logo_medium.png') }}" alt="Logo de cocorico agence digitale">
+                <img src="{{ asset('images/logo-small-color-svg.svg') }}" alt="Logo de cocorico agence digitale" width="115px">
             </div>
             <!-- Nav -->
             <div class="col-lg-9 col-sm-10 col-md-10" id="div-nav">
