--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,15 +10,15 @@
 <body>
 <div class="container-fluid" role="navigation">
     <header>
-        <div class="row" id="header-main">
+        <div class="row d-flex align-items-start " id="header-main">
             <!-- Logo -->
-            <div class="col-auto" id="logo-nav">
+            <div class="order-1 order-lg-0 col-auto col-10 col-lg-2 text-center text-lg-left" id="logo-nav">
                 <img src="{{ asset('images/logo-small-color-svg.svg') }}" alt="Logo de cocorico agence digitale" width="115px">
             </div>
             <!-- Nav -->
-            <div class="col-lg-9 col-sm-10 col-md-10" id="div-nav">
+            <div class=" order-0 order-lg-1 col-lg-8 col-sm-1 col-md-1 col-2" id="div-nav">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    <button class="navbar-toggler " type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -55,7 +55,7 @@
                     </div>
                 </nav>
             </div>
-            <div class="col-auto align-self-center ml-auto p-2 bd-highlight d-sm-none d-lg-block">
+            <div class="order-lg-3 col-auto align-self-center ml-auto p-2 bd-highlight d-none d-lg-block">
                 <a><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}" class="social"
                         alt="logo linkedin"></a>
                 <a><img src="{{ asset('images/social/facebook-logo-bleu.svg') }}" class="social"
