fix nav responsiv v2

--- a/public/CSS/base.css
+++ b/public/CSS/base.css
@@ -441,3 +441,8 @@ footer nav a:hover {
         padding-left: 0;
     }
 }
+@media screen and (max-width: 1282px) {
+    .nav-link {
+        margin-right: 15px;
+    }
+}
