--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,44 +12,51 @@
     <header>
         <div class="row d-flex align-items-start " id="header-main">
             <!-- Logo -->
-            <div class="order-1 order-lg-0 col-auto col-10 col-lg-2 text-center text-lg-left" id="logo-nav">
-                <img src="{{ asset('images/logo-small-color-svg.svg') }}" alt="Logo de cocorico agence digitale" width="115px">
-            </div>
-            <!-- Nav -->
-            <div class=" order-0 order-lg-1 col-lg-8 col-sm-1 col-md-1 col-2" id="div-nav">
-                <nav class="navbar navbar-expand-lg navbar-light">
-                    <button class="navbar-toggler " type="button" data-toggle="collapse"
+            <div class="row col-12 d-lg-none">
+                <div class="order-1 order-lg-0 col-auto col-10 col-lg-2 text-center text-lg-left" id="logo-nav">
+                    <img src="{{ asset('images/logo-small-color-svg.svg') }}" alt="Logo de cocorico agence digitale" width="115px">
+                </div>
+                <!-- Nav -->
+                <nav class=" order-0 col-md-1 col-1 navbar navbar-expand-lg navbar-light text-left ">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse"
                             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                </nav>
+            </div>
+            <div class="order-1 order-lg-0 col-auto col-10 col-lg-2 text-center text-lg-left d-none d-lg-inline-block" id="logo-nav">
+                <img src="{{ asset('images/logo-small-color-svg.svg') }}" alt="Logo de cocorico agence digitale" width="115px">
+            </div>
+            <div class="order-lg-1 col-lg-8  col-4 pl-0 pr-0 " id="div-nav">
+                <nav class="navbar navbar-expand-lg navbar-light text-left ">
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
+                        <ul class="navbar-nav mr-auto col-12">
                             <li class="nav-item active">
                                 <a class="nav-link" href="{{ path('home_page') }}">Accueil</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('catalog_page') }}">Nos services</a>
+                                <a class="nav-link " href="{{ path('catalog_page') }}">Nos services</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('reference_page') }}">Nos clients</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('blog_page') }}">Blog</a>
+                                <a class="nav-link " href="{{ path('blog_page') }}">Blog</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('propos_page') }}">A propos</a>
+                                <a class="nav-link " href="{{ path('propos_page') }}">A propos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('contact_page') }}">Nous contacter</a>
                             </li>
                             <li class="nav-item d-lg-none">
-                                <a class="nav-link" href="#"><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}"
-                                                         class="social"
-                                                         alt="logo linkedin"></a>
-                                <a class="nav-link" href="#"><img src="{{ asset('images/social/facebook-logo-bleu.svg') }}"
-                                                         class="social"
-                                                         alt="logo facebook"></a>
+                                <a class="nav-link mr-0" href="#"><img src="{{ asset('images/social/linkedin-logo-bleu.svg') }}"
+                                                                       class="social"
+                                                                       alt="logo linkedin"></a>
+                                <a class="nav-link mr-0" href="#"><img src="{{ asset('images/social/facebook-logo-bleu.svg') }}"
+                                                                       class="social"
+                                                                       alt="logo facebook"></a>
                             </li>
                         </ul>
                     </div>
