Start catalog mobile structure

--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -8,8 +8,8 @@
     <div class="container-fluid page-content">
         <header>
             <div class="row justify-content-around">
-                <div class="col-lg-5 display-small">
-                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid ">
+                <div class="col-lg-5  d-sm-none d-lg-block">
+                    <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
                 <div class="col-xs-12 col-lg-5 justify-content-around">
                     <div class="row col-xs-6">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="row d-flex justify-content-around">
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-lg-4">
                 <div class="col-md-12 col-lg-12 white">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Basic</h1>
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-lg-4">
                 <div class="col-md-12 col-lg-12 white">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Premium</h1>
@@ -115,7 +115,7 @@
                 </div>
             </div>
 
-            <div class="col-md-4 col-lg-4">
+            <div class="col-sm-12 col-lg-4">
                 <div class="col-md-12 col-lg-12 white">
                     <div class="col-md-12 col-lg-12 center">
                         <h1>Sur-mesure</h1>
@@ -164,7 +164,7 @@
 
             <div class="col-md-12 col-lg-12">
                 <div class="row d-flex justify-content-around">
-                    <div class="col-md-3 col-lg-3">
+                    <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/1.packs-choice.svg') }}" alt="Bootstrap"
                              class="rounded mx-auto d-block svg100">
                         <h5>Vous choisissez</h5>
@@ -173,7 +173,7 @@
                             vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
                             patruelis.</p>
                     </div>
-                    <div class="col-md-3 col-lg-3">
+                    <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/2.discuss.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On discute avec vous</h5>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
@@ -181,7 +181,7 @@
                             vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
                             patruelis.</p>
                     </div>
-                    <div class="col-md-3 col-lg-3">
+                    <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/3.plan.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On planifie avec vous</h5>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
@@ -195,7 +195,7 @@
         <div class="row space">
             <div class="col-md-12 col-lg-12">
                 <div class="row d-flex justify-content-around">
-                    <div class="col-md-3 col-lg-3 ">
+                    <div class="col-sm-12 col-md-3 col-lg-3 ">
                         <img src="{{ asset('images/catalog/4.design.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On design</h5>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
@@ -203,7 +203,7 @@
                             vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
                             patruelis.</p>
                     </div>
-                    <div class="col-md-3 col-lg-3">
+                    <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/5.code.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On développe</h5>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
@@ -211,7 +211,7 @@
                             vultu adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet
                             patruelis.</p>
                     </div>
-                    <div class="col-md-3 col-lg-3">
+                    <div class="col-sm-12 col-md-3 col-lg-3">
                         <img src="{{ asset('images/catalog/6.maintient.svg') }}" alt="Bootstrap" class="rounded mx-auto d-block svg100">
                         <h5>On maintient</h5>
                         <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
