--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -12,7 +12,7 @@
     <div class="container-fluid page-content">
         <header>
             <div class="row justify-content-around block-first">
-                <div class="col-xs-12 col-lg-4 justify-content-around">
+                <div class="col-12 col-lg-4 justify-content-around">
                     <div class="row">
                         <h1>Cocorico Digital</h1>
                     </div>
@@ -30,7 +30,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6 d-sm-none d-lg-block">
+                <div class="col-lg-6 d-none d-lg-block">
                     <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <h4>Nos services</h4>
             </div>
             <div class="row d-flex justify-content-around margin-auto">
-                <div class="col-xs-12 col-lg-3">
+                <div class="col-12 col-lg-3">
                     <div class="row justify-content-center">
                         <img src="{{ asset('images/home/1.marketing.svg') }}" height="100" width="100">
                     </div>
@@ -50,7 +50,7 @@
                             Tria</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-lg-3">
+                <div class="col-12 col-lg-3">
                     <div class="row justify-content-center">
                         <img src="{{ asset('images/home/2.design.svg') }}" class="svg" height="100" width="100">
                     </div>
@@ -59,7 +59,7 @@
                             Tria</p>
                     </div>
                 </div>
-                <div class="col-xs-12 col-lg-3">
+                <div class="col-12 col-lg-3">
                     <div class="row justify-content-center">
                         <img src="{{ asset('images/home/3.dev.svg') }}" class="svg" height="100" width="100">
                     </div>
@@ -69,7 +69,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row col-xs-12 col-lg-12 justify-content-around margin-auto">
+            <div class="row col-12 justify-content-around margin-auto">
                 <a href="#">
                     <button>Button</button>
                 </a>
@@ -77,12 +77,12 @@
         </div>
 
         <section class="row ">
-            <div class="row offset-xs-1 col-xs-10 offset-lg-2 col-lg-8 justify-content-around d-lg-none">
+            <div class="row col-12 offset-lg-2 col-lg-8 justify-content-around d-lg-none margin-auto">
                 <div class="row col-lg-12">
                     <h4>Nos clients</h4>
                 </div>
                 <!-- Carousel -->
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <div id="myCarousel" class="carousel slide col-12 margin-auto" data-ride="carousel">
 
                     <!-- Indicators -->
                     <ul class="carousel-indicators">
@@ -94,7 +94,7 @@
                     <!-- The slideshow -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                            <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
                                 <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                                 <p>Type de projet</p>
                                 <h6>Titre h6</h6>
@@ -103,7 +103,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                            <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
                                 <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                                 <p>Type de projet</p>
                                 <h6>Titre h6</h6>
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                            <div class="col-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
                                 <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                                 <p>Type de projet</p>
                                 <h6>Titre h6</h6>
@@ -133,25 +133,25 @@
                 </div>
             </div>
 
-            <div class="row d-flex justify-content-center home-customers block160 d-sm-none d-lg-flex">
-                <div class="row col-lg-12">
+            <div class="row justify-content-center home-customers block160 d-none d-lg-flex">
+                <div class="row col-12 d-none d-lg-block">
                     <h4>Nos clients</h4>
                 </div>
-                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
                     <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
                     <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white">
+                <div class="col-lg-3 no-padding shadow-sm p-0 mb-0 bg-white rounded white d-none d-lg-block">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="320">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
@@ -159,7 +159,7 @@
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
             </div>
-            <div class="row col-xs-12 col-lg-12 justify-content-around margin-auto">
+            <div class="row col-12 col-lg-12 justify-content-around margin-auto">
                 <a href="#">
                     <button>Button</button>
                 </a>
