First block margin auto and image none all pages

--- a/templates/catalog.html.twig
+++ b/templates/catalog.html.twig
@@ -7,8 +7,8 @@
 {% block body %}
     <div class="container-fluid page-content">
         <header>
-            <div class="row justify-content-around">
-                <div class="col-lg-5 display-small">
+            <div class="row justify-content-around margin-auto">
+                <div class="col-lg-5 d-none d-lg-block">
                     <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid ">
                 </div>
                 <div class="col-xs-12 col-lg-5 justify-content-around">
