--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container-fluid page-content">
         <header>
-            <div class="row justify-content-around block-first">
+            <div class="row justify-content-around block-first margin-auto">
                 <div class="col-xs-12 col-lg-4 justify-content-around">
                     <div class="row">
                         <img src="{{ asset('images/logoH1/a_propos.svg') }}" class="h1">
@@ -23,7 +23,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-6 display-small">
+                <div class="col-lg-6 d-none d-lg-block">
                     <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
