--- a/templates/contact.html.twig
+++ b/templates/contact.html.twig
@@ -1,7 +1,9 @@
 {% extends "base.html.twig" %}
+
 {% block stylesheets %}
     <link href="{{ asset('CSS/contact.css') }}" rel="stylesheet">
 {% endblock %}
+
 {% block body %}
     <div class="container-fluid page-content">
         <header>
@@ -40,27 +42,27 @@
                     {{ form_start(form) }}
 
                     <div class="form-row d-flex justify-content-around">
-                        <div class="form-group col-sm-12 col-lg-5">
+                        <div class="form-group col-sm-12 col-md-5">
                             {{ form_widget(form.firstname) }}
                         </div>
-                        <div class="form-group col-sm-12 col-lg-5">
+                        <div class="form-group col-sm-12 col-md-5">
                             {{ form_widget(form.lastname) }}
                         </div>
                     </div>
                     <div class="form-row d-flex justify-content-around">
-                        <div class="form-group col-sm-12 col-lg-5">
+                        <div class="form-group col-sm-12 col-md-5">
                             {{ form_widget(form.email) }}
                         </div>
-                        <div class="form-group col-sm-12 col-lg-5">
+                        <div class="form-group col-sm-12 col-md-5">
                             {{ form_widget(form.phoneNumber) }}
                         </div>
                     </div>
                     <div class="row d-flex justify-content-around">
-                        <div class="form-group col-sm-12 col-lg-5">
+                        <div class="form-group col-sm-12 col-md-5">
                             {{ form_widget(form.title) }}
                         </div>
-                        <div class="form-group col-md-5 col-lg-5"></div>
-                        <div class="form-group col-sm-12 col-lg-11">
+                        <div class="form-group col-md-5 col-md-5"></div>
+                        <div class="form-group col-sm-12 col-md-11">
                             {{ form_widget(form.content) }}
                         </div>
                     </div>
