--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -11,7 +11,7 @@
 {% block body %}
     <div class="container-fluid page-content">
         <header>
-            <div class="row justify-content-around block-first">
+            <div class="row justify-content-around block-first margin-auto">
                 <div class="col-12 col-lg-4 justify-content-around">
                     <div class="row">
                         <h1>Cocorico Digital</h1>
