--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -7,7 +7,7 @@
 {% block body %}
     <div class="container-fluid  page-content">
         <header>
-            <div class="row justify-content-around">
+            <div class="row justify-content-around margin-auto">
                 <div class="col-xs-12 col-lg-5 justify-content-around">
                     <div class="row col-xs-6">
                         <img src="{{ asset('images/logoH1/nos_clients.svg') }}" class="h1">
@@ -22,7 +22,7 @@
                             dictum.</p>
                     </div>
                 </div>
-                <div class="col-lg-5 d-sm-none d-lg-block">
+                <div class="col-lg-5 d-none d-lg-block">
                     <img src="{{ asset('images/home-intro.jpg') }}" class="img-fluid img-round">
                 </div>
             </div>
