--- a/templates/references.html.twig
+++ b/templates/references.html.twig
@@ -30,28 +30,28 @@
 
         <div class="row block">
             <div class="row d-flex justify-content-around display-small">
-                <div class="col-lg-4 col-sm-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
                     <img src="{{ asset('images/home/projet1.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-4 col-sm-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal thumbnail">
                     <img src="{{ asset('images/home/projet2.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-4 col-sm-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
                     <p>Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </p>
                     <a href="#" class="link1">Voir le projet</a>
                 </div>
-                <div class="col-lg-4 col-sm-12 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
+                <div class="col-lg-4 col-md-4 col-sm-6 col-10 no-padding shadow-sm p-0 mb-0 bg-white rounded white block-decal">
                     <img src="{{ asset('images/home/projet3.jpg') }}" class="img-fluid" alt="" height="180" width="100%">
                     <p>Type de projet</p>
                     <h6>Titre h6</h6>
