fix responsiv page propos

--- a/templates/propos.html.twig
+++ b/templates/propos.html.twig
@@ -30,10 +30,10 @@
         </header>
 
         <div class="row">
-            <div class="col-5">
+            <div class="offset-1 col-10 offset-lg-0 col-lg-5">
                 <h4>L'équipe</h4>
-                <div class="row justify-content-center">
-                    <div class="col-4">
+                <div class="row justify-content-left justify-content-lg-center">
+                    <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right">
                         <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="col-4">
@@ -41,8 +41,8 @@
                         <p>Dev</p>
                     </div>
                 </div>
-                <div class="row space justify-content-center">
-                    <div class="col-4">
+                <div class="row space justify-content-left justify-content-lg-center">
+                    <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right ">
                         <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="col-4">
@@ -50,8 +50,8 @@
                         <p>Design</p>
                     </div>
                 </div>
-                <div class="row space justify-content-center">
-                    <div class="col-4">
+                <div class="row space justify-content-left justify-content-lg-center">
+                    <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right">
                         <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="col-4">
@@ -59,8 +59,8 @@
                         <p>Dev</p>
                     </div>
                 </div>
-                <div class="row space justify-content-center">
-                    <div class="col-4">
+                <div class="row space justify-content-left justify-content-lg-center">
+                    <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right">
                         <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid  ronde">
                     </div>
                     <div class="col-4">
@@ -68,8 +68,8 @@
                         <p>Market</p>
                     </div>
                 </div>
-                <div class="row space justify-content-center">
-                    <div class="col-4">
+                <div class="row space justify-content-left justify-content-lg-center">
+                    <div class="col-7 col-sm-7 col-md-7 col-lg-4 text-right">
                         <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid ronde">
                     </div>
                     <div class="col-4">
@@ -78,28 +78,28 @@
                     </div>
                 </div>
             </div>
-            <div class="col-7">
-                <h4>Titre</h4>
-                <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
+            <div class="col-0 col-lg-7">
+                <h4 class="d-none d-lg-inline-flex">Titre</h4>
+                <p class="d-none d-lg-inline-flex">Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
                     opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu
                     adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis,
                     siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae
                     maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae
                     poscebant.</p>
-                <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid about" id="left">
-                <p>Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
+                <img src="{{ asset('images/home-intro.jpg') }}" alt="Bootstrap" class="img-fluid about d-none d-lg-inline-flex" id="left">
+                <p class="d-none d-lg-inline-flex">Advenit post multos Scudilo Scutariorum tribunus velamento subagrestis ingenii persuasionis
                     opifex callidus. qui eum adulabili sermone seriis admixto solus omnium proficisci pellexit vultu
                     adsimulato saepius replicando quod flagrantibus votis eum videre frater cuperet patruelis,
                     siquid per inprudentiam gestum est remissurus ut mitis et clemens, participemque eum suae
                     maiestatis adscisceret, futurum laborum quoque socium, quos Arctoae provinciae diu fessae
                     poscebant.</p>
 
-                <p>Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum
+                <p class="d-none d-lg-inline-flex">Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum
                     ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se abunde
                     iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana porrigitur,
                     non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec indumentorum vilitate
                     gregariis militibus discrepantes opposita cuncta superasse virtute.</p>
-                <div class="row justify-content-center">
+                <div class="row justify-content-center d-none d-lg-inline-flex">
                     <button>Button</button>
                 </div>
             </div>
